apollo-router/src/query_planner/snapshots/uhg_custom_appollo_roouter__query_planner__query_planner_service__tests__empty_query_plan_usage_reporting.snap
---
source: apollo-router/src/query_planner/query_planner_service.rs
assertion_line: 728
expression: usage_reporting
---
{
  "statsReportKey": "# -\n{__schema{queryType{name}}}",
  "referencedFieldsByType": {
    "Query": {
      "fieldNames": [
        "__schema"
      ],
      "isInterface": false
    },
    "__Schema": {
      "fieldNames": [
        "queryType"
      ],
      "isInterface": false
    },
    "__Type": {
      "fieldNames": [
        "name"
      ],
      "isInterface": false
    }
  }
}
