apollo-router/src/query_planner/snapshots/uhg_custom_appollo_roouter__query_planner__query_planner_service__tests__plan_usage_reporting.snap
---
source: apollo-router/src/query_planner/query_planner_service.rs
assertion_line: 650
expression: plan.usage_reporting
---
{
  "statsReportKey": "# -\n{me{name{first last}}}",
  "referencedFieldsByType": {
    "Name": {
      "fieldNames": [
        "first",
        "last"
      ],
      "isInterface": false
    },
    "Query": {
      "fieldNames": [
        "me"
      ],
      "isInterface": false
    },
    "User": {
      "fieldNames": [
        "name"
      ],
      "isInterface": false
    }
  }
}
