apollo-router/src/query_planner/snapshots/uhg_custom_appollo_roouter__query_planner__query_planner_service__tests__subselections-3.snap
---
source: apollo-router/src/query_planner/query_planner_service.rs
assertion_line: 814
expression: "subselections_keys(r#\"query Q { me {\n            username\n            name {\n                ... @defer(label: \"A\") { first }\n                ... @defer(label: \"B\") { last }\n            }\n        }}\"#,\n& planner).await"
---
None 0 query{ me { username } }
Some("A") 0 query{ me { name { first } } }
Some("B") 0 query{ me { name { last } } }
