apollo-router/src/query_planner/snapshots/uhg_custom_appollo_roouter__query_planner__query_planner_service__tests__subselections-4.snap
---
source: apollo-router/src/query_planner/query_planner_service.rs
assertion_line: 824
expression: "subselections_keys(r#\"query Q { me {\n            username\n            # myName:\n             name {\n                firstName: first\n                ... @defer(label: \"A\") { lastName: last }\n            }\n        }}\"#,\n& planner).await"
---
None 0 query{ me { username name { firstName: first } } }
Some("A") 0 query{ me { name { lastName: last } } }
