apollo-router/src/query_planner/snapshots/uhg_custom_appollo_roouter__query_planner__query_planner_service__tests__subselections-5.snap
---
source: apollo-router/src/query_planner/query_planner_service.rs
assertion_line: 833
expression: "subselections_keys(r#\"query Q { user(id: 42) {\n            username\n            name {\n                first\n                ... @defer(label: \"A\") { last }\n            }\n        }}\"#,\n& planner).await"
---
None 0 query{ user { username name { first } } }
Some("A") 0 query{ user { name { last } } }
