apollo-router/src/query_planner/snapshots/uhg_custom_appollo_roouter__query_planner__query_planner_service__tests__subselections.snap
---
source: apollo-router/src/query_planner/query_planner_service.rs
assertion_line: 806
expression: "subselections_keys(\"query Q { me { username name { first last }}}\", &\nplanner).await"
---

